--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  camera: ^0.8.1
   dropdown_formfield: ^0.1.4
   provider: ^6.0.2
   intl: ^0.17.0
+  google_maps_flutter: ^2.1.1
+  geocoding: ^2.0.2
+  contacts_service: ^0.6.3
+  permission_handler: ^8.3.0
+  hive: ^2.0.5
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
+  path_provider: ^2.0.8
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
@@ -59,6 +72,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
