--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  camera: ^0.8.1
   dropdown_formfield: ^0.1.4
   provider: ^6.0.2
   intl: ^0.17.0
@@ -48,6 +47,7 @@ dependencies:
   path_provider: ^2.0.8
   flutter_localizations:
     sdk: flutter
+  camera: ^0.9.4+9
 
 dev_dependencies:
   integration_test:
